--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fuckMeHard": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "This",
